[package]
name = "io-uring"
version = "0.5.3"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/io-uring"
homepage = "https://github.com/tokio-rs/io-uring"
documentation = "https://docs.rs/io-uring"
description = "The low-level `io_uring` userspace interface for Rust"
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["ocalls"]
members = [ "io-uring-test", "io-uring-bench" ]

[features]
default = [ "libc" ]
unstable = []
overwrite = [ "bindgen" ]
direct-syscall = [ "sc" ]
sgx = [ "sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc" ]

[dependencies]
libc = { version = "0.2", optional = true }
bitflags = "1"
libc = { version = "0.2.98", default-features = false }
sc = { version = "0.2", optional = true }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc", optional = true }
[build-dependencies]
bindgen = { version = "0.60", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
socket2 = "0.4"
slab = "0.4"

[package.metadata.docs.rs]
features = [ "unstable" ]
